--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,37 +1,35 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Dating App</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+<div class="container">
+    <a class="navbar-brand" href="#">Dating App</a>
 
-
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Matches</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Lists</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">Messages</a>
-    </li>   
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#" (click)="logout()">Logout</a>
-    </li>   
-  </ul>
-
-  <div *ngIf="loggedin()" class="dropdown">
-    <a class="dropdown-toggle text-light">
-      Welcome User
-    </a>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
+    <ul *ngIf="loggedin()" class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Matches</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link disabled text-light" href="#">Messages</a>
+      </li>
+    </ul>
+  
+    <div *ngIf="loggedin()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Welcome {{authService.decodedToken?.unique_name | titlecase}}
+      </a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item" ><i class="fa fa-user mr-sm-2"></i>Edit Profile</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out mr-sm-2"></i>Logout</a>
+      </div>
     </div>
-  </div>
+  
+    <form *ngIf="!loggedin()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+      <input class="form-control mr-sm-2" type="text" name="username" required placeholder="Username" [(ngModel)]="model.Username">
+      <input class="form-control mr-sm-2" type="password" name="password" required placeholder="Password" [(ngModel)]="model.Password">
+      <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+    </form>
+</div>
 
-  <form *ngIf="!loggedin()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-    <input class="form-control mr-sm-2" type="text" name="username" required placeholder="Username" [(ngModel)]="model.Username">
-    <input class="form-control mr-sm-2" type="password" name="password" required placeholder="Password" [(ngModel)]="model.Password">
-    <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
-  </form>
+ 
 
 </nav>
