--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,37 +1,39 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-<div class="container">
-    <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="active" >Dating App</a>
+  <div class="container">
+    <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="active">Dating App</a>
 
     <ul *ngIf="loggedin()" class="navbar-nav mr-auto">
-      <li class="nav-item" routerLinkActive="active" >
+      <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/members']">Matches</a>
       </li>
-      <li class="nav-item" routerLinkActive="active" >
-          <a class="nav-link" [routerLink]="['/lists']" href="#">Lists</a>
-        </li>
-      <li class="nav-item" routerLinkActive="active" >
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/lists']" href="#">Lists</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/messages']">Messages</a>
       </li>
     </ul>
-  
+
     <div *ngIf="loggedin()" class="dropdown" dropdown>
+      <span class="mr-1">
+        <img src="{{photoUrl}}" alt="" >
+      </span>
       <a class="dropdown-toggle text-light" dropdownToggle>
         Welcome {{authService.decodedToken?.unique_name | titlecase}}
       </a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item" ><i class="fa fa-user mr-sm-2"></i>Edit Profile</a>
+        <a class="dropdown-item" [routerLink]="['/members/edit']">
+          <i class="fa fa-user mr-sm-2"></i>Edit Profile</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out mr-sm-2"></i>Logout</a>
+        <a class="dropdown-item" (click)="logout()">
+          <i class="fa fa-sign-out mr-sm-2"></i>Logout</a>
       </div>
     </div>
-  
+
     <form *ngIf="!loggedin()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
       <input class="form-control mr-sm-2" type="text" name="username" required placeholder="Username" [(ngModel)]="model.Username">
       <input class="form-control mr-sm-2" type="password" name="password" required placeholder="Password" [(ngModel)]="model.Password">
       <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
-</div>
-
- 
-
+  </div>
 </nav>
