--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -13,8 +13,8 @@
           </button>
       </li>
         <li class="list-inline-item">
-            <button class="btn btn-primary">
-              <i class="fa fa-envelope"></i>
+            <button class="btn btn-primary" [routerLink]="['/members/', user.id]" [queryParams]="{tab: 3}">
+              <i class="fa fa-envelope"></i> 
             </button>
         </li>      
     </ul>
